[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
mongodb = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15"
chrono = "0.4.38"
futures-util = "0.3.30"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.2"
